src/main/java/com/example/ticket/api/error/ConflictException.java
package com.example.ticket.api.error;

public class ConflictException extends RuntimeException {
    public ConflictException(String message) {
        super(message);
    }
}
